# LongestEdgeBisectionDemos

./: .appveyor.yml  .gitmodules  CMakeLists.txt  README.md
ApiDebug/: ApiDebug.cpp
ApiDebug/shaders/: Target.glsl  Triangle.glsl
CacheTest/: CacheTest.cpp
CompressionVideo/: CompressionVideo.cpp
CompressionVideo/shaders/: Leb.glsl  LebReduction.glsl  LebRender.glsl  LebUpdate.glsl
ImportanceSampling/: ImportanceSampling.cpp
ImportanceSampling/shaders/: Leb.glsl  LebBatch.glsl  LebRender.glsl  LebSampling.glsl  LebUpdate.glsl
ImportanceSamplingVideo/: ImportanceSamplingVideo.cpp
ImportanceSamplingVideo/glad/: glad.c  glad.h
ImportanceSamplingVideo/shaders/: LebRender.glsl  LebSampling.glsl  LebUpdate.glsl
MegaTextureGenerator/: MegaTextureGenerator.cpp
MegaTextureGenerator/glad/: glad.c
MegaTextureGenerator/shaders/: ChunkGenerator.glsl  ChunkPreview.glsl  TerrainPreview.glsl  TerrainTexture.glsl  TextureGeneration.glsl
SparseTexture/: LongestEdgeBisection.glsl  LongestEdgeBisectionDispatch.glsl  LongestEdgeBisectionReduction.glsl  LongestEdgeBisectionReductionPrepass.glsl  LongestEdgeBisectionUpdate.glsl  MegaTexture.h  SparseTexture.cpp  TeraTexture.h  stringify.cpp
SparseTexture/glad/: glad.c  glad.h
SparseTexture/shaders/: LongestEdgeBisectionUpdate.glsl  TeraTexture.glsl  TerrainBatcher.glsl  TerrainRenderCommon.glsl  TerrainRenderTS.glsl  TerrainRenderTS_Wire.glsl  TextureGeneration.glsl  TextureGenerationBindless.glsl
TeraTerrain/: TeraTerrain.cpp
TeraTerrain/glad/: glad.c  glad.h
TeraTerrain/shaders/: BrunetonAtmosphere.glsl  LongestEdgeBisection.glsl  LongestEdgeBisectionSumReduction.glsl  Sky.glsl  TeraTexture.glsl  TerrainRenderCS.glsl  TerrainRenderCS_Wire.glsl  TerrainRenderCommon.glsl
TeraTextureConverter/: TeraTextureConverter.cpp
TeraTextureConverter/glad/: glad.c
TeraTextureConverter/shaders/: Mipmap.glsl  TextureGeneration.glsl
TeraTextureGenerator/: TeraTextureGenerator.cpp
TeraTextureGenerator/glad/: glad.c
TeraTextureGenerator/shaders/: LongestEdgeBisection.glsl  Render.glsl  TextureGeneration.glsl
TeraTextureLibrary/: LongestEdgeBisectionUpdate.glsl  TeraTexture.h
TeraTextureMipmap/: TeraTextureMipmap.cpp
TeraTextureMipmap/glad/: glad.h
TeraTextureMipmap/shaders/: MipmapGeneration.glsl
TeraTextureViewer/: TeraTextureViewer.cpp
TeraTextureViewer/glad/: glad.h
TeraTextureViewer/shaders/: Render.glsl  TeraTexture.glsl
Terrain/: Terrain.cpp
Terrain/shaders/: LongestEdgeBisectionBatcher.glsl  LongestEdgeBisectionSumReduction.glsl  TerrainBatcher.glsl  TerrainRenderCS.glsl  TerrainRenderCS_Wire.glsl  TerrainRenderCommon.glsl  TerrainRenderGS.glsl  TerrainRenderGS_Wire.glsl  TerrainRenderTS.glsl  TerrainRenderTS_Wire.glsl  TerrainTopView.glsl  TerrainUpdateCS.glsl
Texture/: MegaTexture.h  Texture.cpp
Texture/shaders/: LongestEdgeBisectionDispatch.glsl  LongestEdgeBisectionReductionPrepass.glsl  LongestEdgeBisectionUpdate.glsl  TerrainRenderCS.glsl  TerrainRenderCommon.glsl  TerrainRenderGS.glsl
assets/: LongestEdgeBisectionSumReductionPrepass.glsl  README.md
terrain/: terrain.cpp
terrain/shaders/: LongestEdgeBisectionSumReduction.glsl  TerrainRenderCommon.glsl  TerrainRenderGS.glsl  TerrainRenderMS.glsl
